--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <title>Krisihi AI</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><path d='M272 96c-78.6 0-145.1 51.5-167.7 122.5c33.6-17 71.5-26.5 111.7-26.5h88c8.8 0 16 7.2 16 16s-7.2 16-16 16h-88c-16.6 0-32.7 1.9-48.3 5.4c-6.2 1.4-11.9 3.1-17.3 5.1c-5.4 2-10.4 4.3-15 6.9c-4.6 2.6-8.8 5.4-12.7 8.4c-3.9 3-7.4 6.2-10.5 9.5c-3.1 3.3-5.8 6.7-8.1 10.2c-2.3 3.5-4.2 7.1-5.7 10.8c-1.5 3.7-2.6 7.5-3.3 11.3c-.7 3.8-1 7.6-1 11.4c0 3.8 .3 7.6 1 11.4c.7 3.8 1.8 7.6 3.3 11.3c1.5 3.7 3.4 7.3 5.7 10.8c2.3 3.5 5 6.9 8.1 10.2c3.1 3.3 6.6 6.5 10.5 9.5c3.9 3 8.1 5.8 12.7 8.4c4.6 2.6 9.6 4.9 15 6.9c5.4 2 11.1 3.7 17.3 5.1c15.6 3.5 31.7 5.4 48.3 5.4h88c8.8 0 16 7.2 16 16s-7.2 16-16 16h-88c-40.2 0-78.1-9.5-111.7-26.5C126.9 364.5 193.4 416 272 416c106 0 192-86 192-192S378 96 272 96z' fill='%2322c55e'/></svg>">
   </head>
   <body>
     <div id="root"></div>
